# vigil

./: .env.example  .gitignore  Makefile  README.md  app.py  demo.db  pyproject.toml  requirements.txt  vigil_build_spec.md
data/: sample_messages.json
data/corpus/: faq_general.json  how_it_works.json  impression_kit.json  refund_policy.json  shipping.json
data/sample_webhooks/: email.json  gorgias.json  shopify.json  zendesk.json
docs/: DEMO.md  DEPLOY.md  HANDOFF.md  INTEGRATIONS.md  NARRATIVE.md
eval/: build_dataset.py  dataset.csv  eval_report.md  rubric.md  run_eval.py
migrations/: 001_init.sql
tests/: conftest.py  test_adapters.py  test_evaluate.py  test_ingest.py  test_llm.py  test_llm_openai.py  test_outbound.py  test_pipeline.py  test_respond.py  test_retrieve.py  test_router.py  test_rules.py  test_schemas.py  test_webhook.py  test_webhook_security.py
vigil/: __init__.py  adapters.py  clinical_safety.py  config.py  db.py  evaluate.py  ingest.py  llm.py  outbound.py  pipeline.py  realtime.py  respond.py  retrieve.py  router.py  rules.py  schemas.py  seed.py  triage.py  ui.py  webhook.py  webhook_security.py
