[project]
name = "vigil"
version = "0.1.0"
description = "Complaint & adverse-event intake/triage layer for DTC clear-aligner support (detection aid with a human gate)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.69",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0",
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
    "pandas>=2.2,<3",
    "streamlit>=1.40",
    "altair>=5.3",
    "tabulate>=0.9",
]

[project.optional-dependencies]
# Semantic retrieval backend (optional — TF-IDF is the zero-download default).
# Enable with: uv sync --extra semantic
semantic = ["fastembed==0.7.1"]

# Installed by default on `uv sync` (PEP 735 dependency groups), so `make test` just works.
[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vigil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
